Fix contrast issues

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  color: $secondary-color;
+  color: $main-color;
   font-size: 1rem;
   min-height: 3rem;
   line-height: 3rem;
