--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -44,8 +44,8 @@ code {
   display: inline-block;
   height: 1em;
   width: 1em;
-  vertical-align: -.125em;
-  margin-right: 4px;
+  vertical-align: -.15em;
+  margin-right: .25em;
 }
 
 .link {
